# SaltedBlog

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md
.codex/skills/change-validation/: SKILL.md
.codex/skills/change-validation/agents/: openai.yaml
.codex/skills/change-validation/scripts/: validate_change.py
.codex/skills/deployment-preflight/: SKILL.md
.codex/skills/deployment-preflight/agents/: openai.yaml
.codex/skills/deployment-preflight/scripts/: deployment_preflight.py
.codex/skills/migration-safety/: SKILL.md
.codex/skills/migration-safety/agents/: openai.yaml
.codex/skills/migration-safety/scripts/: validate_migrations.py
.codex/skills/release-preflight/: SKILL.md
.codex/skills/release-preflight/agents/: openai.yaml
.codex/skills/release-preflight/scripts/: bump_version.py  release_preflight.py  versioning.py
.codex/skills/security-review/: SKILL.md
.codex/skills/security-review/agents/: openai.yaml
.codex/skills/security-review/references/: checklist.md
.codex/tests/: test_workflow_tools.py
.github/workflows/: release-images.yml  release-preflight.yml  security.yml
api/: Cargo.toml
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m20260716_000001_init.rs  m20260716_000002_site_icons.rs  m20260716_000003_ai_digest.rs  m20260717_000004_security_logs.rs  m20260717_000005_news_tasks.rs  m20260717_000006_news_task_publish_options.rs  m20260717_000007_single_language_posts.rs  m20260717_000008_author_identity.rs  m20260721_000009_news_task_retries.rs
api/src/: auth.rs  backup.rs  backup_scheduler.rs  config.rs  error.rs  logging.rs  main.rs  outbound.rs  render.rs  state.rs
api/src/entities/: categories.rs  digest_jobs.rs  event_logs.rs  friends.rs  mfa_recovery_codes.rs  mod.rs  news_fetch_logs.rs  news_items.rs  news_sources.rs  news_tasks.rs  page_views.rs  post_tags.rs  posts.rs  preauth_tokens.rs  series.rs  sessions.rs  site_icons.rs  tags.rs  uploads.rs  users.rs
api/src/news/: digest.rs  fetch.rs  fetcher.rs  filter.rs  llm.rs  mod.rs  normalize.rs  ranker.rs  scheduler.rs  seed.rs  tasks.rs
api/src/routes/: admin_backup.rs  admin_logs.rs  admin_misc.rs  admin_news.rs  admin_posts.rs  admin_taxonomy.rs  auth.rs  dto.rs  mod.rs  public.rs
deploy/: .env.example  CLOUDFLARE_ACCESS.md  Caddyfile  Caddyfile.cloudflare  Dockerfile.api  Dockerfile.caddy  Dockerfile.web  HARDENING.md  docker-compose.cloudflare.yml  docker-compose.yml  init-db.sh
deploy/secrets/: README.md
scripts/: backup.sh
web/: astro.config.mjs  package-lock.json  package.json
web/public/: admin-theme.js
web/src/: env.d.ts  middleware.ts
web/src/components/: Footer.astro  Giscus.astro  Header.astro  Pagination.astro  PostCard.astro
web/src/components/pages/: AboutPage.astro  ArchivePage.astro  FriendsPage.astro  HomePage.astro  PostDetailPage.astro  PostsPage.astro  SearchPage.astro  TaxonomyIndexPage.astro
web/src/i18n/: index.ts
web/src/layouts/: AdminLayout.astro  BaseLayout.astro
web/src/lib/: admin-client.ts  api.ts  feeds.ts
web/src/pages/: 404.astro  about.astro  archive.astro  friends.astro  index.astro  rss.xml.ts  search.astro  sitemap.xml.ts
web/src/pages/admin/: backup.astro  friends.astro  index.astro  login.astro  logs.astro  news.astro  security.astro  settings.astro  (+2 more)
web/src/styles/: admin.css  base.css  prose.css  tokens.css
(+22 files in other folders)
