[workspace]
members = [".", "migration"]
resolver = "2"

[package]
name = "salted-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["fs", "trace", "limit"] }
sea-orm = { version = "1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
] }
migration = { path = "migration" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
comrak = "0.54"
jieba-rs = "0.10"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
fs2 = "0.4"
tokio-util = { version = "0.7", features = ["io"] }
feed-rs = "2.4.0"
scraper = "0.27.0"
url = "2.5.8"
# rustls-no-provider + 显式 ring：避免默认 aws-lc 后端引入 cmake/nasm 原生构建依赖
reqwest = { version = "0.13", default-features = false, features = [
    "rustls-no-provider",
    "http2",
    "json",
    "gzip",
    "charset",
] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }

[profile.release]
lto = "thin"
strip = true
